--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -39,6 +39,7 @@
     background: #115173;
     height: 50px;
     font-size: 16px;
+    font-weight: bold;
     color: #fff;
     padding: 0 20px;
     box-sizing: border-box;
@@ -50,6 +51,7 @@
     background: #115173;
     height: 50px;
     font-size: 16px;
+    font-weight: bold;
     color: #fff;
     padding: 20px;
     box-sizing: border-box;
@@ -59,6 +61,7 @@
   .flat-button {
     color: #ffd700;
     font-size: 11px;
+    font-weight: bold;
     letter-spacing: 3px;
     text-decoration: none;
     padding: 8px 10px;
