--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -83,6 +83,7 @@
       color: #fff;
       font-family: sans-serif;
       font-weight: 300;
+      font-size:medium;
       max-width: fit-content;
       animation: pulse 1s;
       &:nth-of-type(1) {
